<resources>
    <string name="app_name">Bookly</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="fullname">Enter your full name</string>
    <string name="username">Enter your username</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="go_login">Already have an account?</string>
    <string name="go_signup">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="write_email">Please write your email</string>
    <string name="save_profile">Save</string>
    <string name="select_image">Select Image</string>
    <string name="add_my_list">Add My List</string>
    <string name="number_of_pages_you_read">Number of pages you read</string>
</resources>